--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,9 +2,11 @@ github_users:
   - eric-sclafani
 
 github_repos:
+  - eric-sclafani/langviz
   - eric-sclafani/syntax-regex-matcher
   - eric-sclafani/gram2vec
   - eric-sclafani/authorship_analysis
   - eric-sclafani/deltastar
   - eric-sclafani/RussianDateGenerator
   - eric-sclafani/Madlibs
+
